@@ -1,4 +1,6 @@
   [Michele Simionato]
+  * Added a command `oq prepare_site_model` to prepare a sites.csv file
+    containing the vs30 and changed the engine to use it
   * Added a cutoff when storing a PoE=1 from a CSV file, thus avoiding NaNs
     in classical_damage calculations
   * Reduced the data transfer in the risk model by only considering the
